Fix main content visibility + improve menu spacing

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -1,70 +1,51 @@
 @use "./base.scss";
 
 /* ========================================
-   Menu-Fonts und Abstände anpassen
+   Menu-Fonts und Abstände anpassen (VORSICHTIG)
    ======================================== */
 
-/* Alle Menu-Fonts nicht fett, kleinere Zeilenabstände */
-.sidebar,
-.left,
-.right,
-.explorer,
-.toc,
-.table-of-contents,
-nav {
-  font-weight: normal !important;
-  line-height: 1.2 !important;
-}
-
-.sidebar a,
-.left a,
-.right a,
-.explorer a,
-.toc a,
-.table-of-contents a,
-nav a {
-  font-weight: normal !important;
-  line-height: 1.2 !important;
-  margin-bottom: 1px !important;
+/* NUR Sidebar/Explorer-spezifische Styles */
+.sidebar ul,
+.explorer ul {
+  line-height: 1.4 !important;
 }
 
 .sidebar li,
-.left li,
-.right li,
-.explorer li,
-.toc li,
-.table-of-contents li {
-  margin-bottom: 2px !important;
-  line-height: 1.2 !important;
+.explorer li {
+  margin-bottom: 4px !important;
+  line-height: 1.4 !important;
 }
 
-/* Linkes Seitenmenu - Ordner vs. Dateien */
-.explorer .folder-outer,
+.sidebar a,
+.explorer a {
+  font-weight: normal !important;
+  display: block !important;
+  margin-left: 0 !important;
+  padding-left: 0 !important;
+}
+
+/* Ordner-Links größer */
 .explorer .folder-title,
-.sidebar .folder-outer,
 .sidebar .folder-title {
   font-size: 0.9rem !important;
-  font-weight: normal !important;
-  margin-left: 0 !important;
 }
 
-.explorer .file-link,
-.explorer .internal,
-.sidebar .file-link,
-.sidebar .internal,
+/* Datei-Links kleiner */
 .explorer li a:not(.folder-title),
 .sidebar li a:not(.folder-title) {
   font-size: 0.8rem !important;
-  font-weight: normal !important;
-  margin-left: 0 !important;
 }
 
-/* Erste Zeile nicht eingerückt */
-.explorer > ul > li:first-child,
-.sidebar > ul > li:first-child,
-.toc > ul > li:first-child {
-  margin-left: 0 !important;
-  padding-left: 0 !important;
+/* Rechtes TOC Menu */
+.toc,
+.table-of-contents {
+  font-weight: normal !important;
+  line-height: 1.3 !important;
+}
+
+.toc a,
+.table-of-contents a {
+  font-weight: normal !important;
 }
 
 /* ========================================
@@ -75,21 +56,12 @@ nav a {
 .popover-hint,
 .tooltip,
 [data-popover],
-.preview-popup {
-  display: none !important;
-  visibility: hidden !important;
-}
-
-a[data-slug]:hover::after,
-a.internal:hover::after,
-a:hover .popover {
-  display: none !important;
-}
-
+.preview-popup,
 #popover-container,
 .popover-container,
 .preview-container {
   display: none !important;
+  visibility: hidden !important;
 }
 
 /* ========================================
